# Hydra

./: .gitignore  Cargo.toml  README.md  mkdocs.yml  package-lock.json  testfile  testfile.json
.github/workflows/: pipeline.yaml
data/: agent1.json  tictactoe.json
hydra_css/: README.md  index.html  styles.css
hydra_css/js/: board.js  minimax.js
hydra_css/pages/: documentation.html  game_detail.html  games.html  minimax.html
src/: .board.rs.swp  agent.rs  board.rs  lib.rs  main.rs  test.py
src/engine/: minimax.rs  mod.rs
src/engine/minimax_test/: mod.rs
src/environment/: agent.rs  mod.rs  state.rs  test_environment.rs
src/game/: .tictactoe.rs.swp  1q  2  c4.rs  mod.rs  test_c4.rs  test_tictactoe.rs  tictactoe.rs
src/games/: c4.rs  gridworld.rs  mod.rs  test_games.rs  tictactoe.rs
src/ndarray/: mod.rs  ndarray.rs  ops.rs  test_ndarray.rs
src/structures/: mod.rs  ndarray.rs  ops.rs
tests/: environment_tests.rs  games_tests.rs  integration_test.rs  ndarray_tests.rs
web/: hydra.dia  index.js  package-lock.json  package.json  swagger.js  swagger_output.json
web/controllers/: EntitlementController.js  GamesController.js  HydraController.js  MLController.js  ModelsController.js  TicTacToeController.js  UserController.js
web/db/: create_user.sql  db.js  db.sql
web/models/: entitlement.js  game.js  model.js  user.js
web/public/css/: styles.css
web/public/html/: game_detail.html  (+4 more)
web/routes/: entitlements.js  games.js  hydra.js  models.js  tic_tac_toe.js  users.js
web/views/: documentation.ejs  game_detail.ejs  games.ejs  index.ejs
(+8 files in other folders)
